<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main -->
		
	<string name="app_name">Q2Android</string>
	<string name="refresh">Refresh</string>
	<string name="new_question">New</string>
					
	<!-- Login -->
	
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="website">Website</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login_instructions">Enter a website address to log into or register for. The website must be running Q2Android and have the xml-rpc receiver plugin installed.</string>
	<string name="website_hint">www.yoursite.com</string>
	<string name="missing_value">Please fill all fields</string>
	<string name="missing_website">Please enter a valid website</string>
	
	<!-- Context Menu -->

	<string name="view">View</string>
	<string name="share_link">Share Link</string>
	<string name="share_via">Share Via…</string>
	<string name="delete">Delete</string>
	<string name="really_delete_post">Really delete post?</string>
		
    <!-- Preferences -->
    
	<string name="preferences">Preferences</string>
    
	<string name="helpPref">Help</string>

	<string name="streamPref">Stream Preferences</string>
	<string name="streamMax">Max # of Stream Items</string>
	<string name="contentMax">Max Content Length</string>
	<string name="contentMaxDesc">leave blank for unlimited</string>
					
	<string name="advPref">Advanced Preferences</string>
	<string name="autoUpdate">Auto Update</string>
	<string name="autoUpdateDesc">Update stream on startup</string>
		
	<!-- User -->
	
	<string name="sprofile">%1$s\'s Profile</string>  
	<string name="befriend">Befriend</string>  
	<string name="unfriend">Unfriend</string>  
	<string name="friending">Friending</string>  
	<string name="message">Message</string>  
	<string name="close">Close</string>  
	<string name="really_delete_user">Really delete user account?</string>
	
	<!-- Help -->
		
	<string name="help">Help</string>
	<string name="help_text">
	    <![CDATA[
	    <body  style="text-align:justify">
			<p>This is a simple Question2Answer client. If configured properly, it will allow you to interact with your Question2Answer install.
			<p>Step 1: (Webmaster) Install the Question2Answer XML-RPC plugin from <a href="https://github.com/NoahY/q2a-xml-rpc">https://github.com/NoahY/q2a-xml-rpc</a>
			<p>Step 2: (Webmaster) Activate and configure above plugin via Admin->Plugins and Admin->Permissions
			<p>Step 3: (App user) From the main screen menu, click "Login" and enter your website (root path, e.g. <a href="http://www.site.com/">http://www.site.com/</a>), username, and password and click "Login".  You can also register a new user by entering the website and clicking "Register", which will take you to the site.
			<p>Once you have completed these steps correctly, you should be able to interact with your Question2Answer site via the app.
		</body>
		]]>
	</string>
	<!-- Toasts -->
	
	<string name="posted">Update posted</string>
	<string name="updated">Stream updated</string>
	<string name="got_messages">Retrieved %d messages</string>
	<string name="post_deleted">Post deleted</string>
	<string name="user_deleted">User deleted</string>
	<string name="commented">Comment posted</string>
	<string name="error">Something went wrong; please check your setup and the system log</string>
	<string name="registered">Service registered.  Visit the user\'s settings page to accept the service.</string>
	<string name="sent">Message Sent</string>  
	<string name="got_notifications">Retrieved %s notifications</string>
				
	<!-- Errors -->				
	
	<string name="checkSetupInternet">No internet connection.</string>
	<string name="noWebsite">Please specify a website in preferences.</string>
	<string name="websiteSyntaxError">Invalid website URL</string>
	<string name="connectionRejected">Connection rejected - check username</string>
	
	<!-- Misc -->	

	<string name="avatar">Avatar</string>

	<!-- Components -->
	
	<string name="activity">Activity</string>
	<string name="friends">Friends</string>
	<string name="groups">Groups</string>
	<string name="messages">Messages</string>
		
	<!-- Filters -->
	
	<string name="created">Questions</string>
	<string name="updated">Latest Updated</string>
	<string name="acount">Most Answers</string>
	<string name="flagcount">Most Flagged</string>
	<string name="netvotes">Most Voted</string>
	<string name="views">Most Viewed</string>
	<string name="hotness">What\'s Hot</string>
			
	<!-- Buttons -->	
	
	<string name="edit">Edit</string>
	<string name="hide">Hide</string>
	<string name="ask_related">Ask Related</string>
	<string name="flag">Flag</string>
	<string name="answer">Answer</string>
	<string name="comment">Comment</string>
	
	<!-- Dialogs -->
					
	<string name="new_question">New Question</string>
	<string name="post_answer">Post Answer</string>
	<string name="post_comment">Post Comment</string>
	
	<string name="submit">Submit</string>

	<string name="title_hint">Title…</string>
	<string name="content_hint">Question body…</string>
	<string name="tags_hint">Spaced tags…</string>
									
	<!-- Stream -->
	
	<string name="num_views">views</string>
	<string name="answers">answers</string>
	<string name="votes">votes</string>

	<string name="prev">Prev. Page</string>
	<string name="next">Next Page</string>
		
	<string name="one_view">view</string>
	<string name="one_answer">answer</string>
	<string name="one_vote">vote</string>
	
	<!-- Options -->
	<string name="q_options">Question Options</string>
	
</resources>