<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/streamPref"/>
	    <EditTextPreference
	        android:key="stream_max"
	        android:title="@string/streamMax"
	        />
	    <EditTextPreference
	        android:key="content_max"
	        android:title="@string/contentMax"
			android:summary="@string/contentMaxDesc"
	        />
	<PreferenceCategory android:title="@string/advPref" />
	    <CheckBoxPreference
	        android:key="auto_update"
	        android:defaultValue="true"
	        android:title="@string/autoUpdate"
	        android:summary="@string/autoUpdateDesc"
	        />
	    <EditTextPreference
	        android:key="editor_type"
	        android:title="@string/editorType"
			android:summary="@string/editorTypeDesc"
	        />
</PreferenceScreen>
