<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	>
    <LinearLayout
		android:id="@+id/login_shell"
	    android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:background="@drawable/login_back"
		android:padding="20dp"
		android:gravity="right"
		>
		<TextView
		    android:text="@string/login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textSize="22sp"
			android:textStyle="bold"
			android:gravity="left"
		    />
		<TextView
		    android:text="@string/login_instructions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textSize="12sp"
			android:paddingBottom="8dp"
			android:paddingTop="4dp"
		    />
		<RelativeLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
			<TextView
			    android:id="@+id/website_label"
			    android:text="@string/website"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_centerVertical="true"
				android:textColor="#FFFFFF"
				android:textSize="14sp"
				android:textStyle="bold"
				android:paddingRight="8dp"
			    />
			<EditText
			    android:id="@+id/website"
			    android:inputType="textUri"
			    android:layout_toRightOf="@id/website_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:hint="@string/website_hint"
			    />
		</RelativeLayout>
				
		<RelativeLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
			<TextView
			    android:id="@+id/user_label"
			    android:text="@string/username"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_centerVertical="true"
				android:textColor="#FFFFFF"
				android:textSize="14sp"
				android:textStyle="bold"
				android:paddingRight="8dp"
			    />
			<EditText
			    android:id="@+id/username"
			    android:inputType="text"
			    android:layout_toRightOf="@id/user_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
			    />
		</RelativeLayout>
		<RelativeLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
			<TextView
			    android:id="@+id/pass_label"
			    android:text="@string/password"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_centerVertical="true"
				android:textColor="#FFFFFF"
				android:textSize="14sp"
				android:textStyle="bold"
				android:paddingRight="8dp"
			    />
			<EditText
			    android:id="@+id/password"
			    android:inputType="textPassword"
			    android:layout_toRightOf="@id/pass_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="14sp"
			    />
		</RelativeLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="8dp"
		    >
			<Button
			    android:id="@+id/cancel"
			    android:text="@android:string/cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    />
			<Button
			    android:id="@+id/login"
			    android:text="@string/login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    />
			<Button
			    android:id="@+id/register"
			    android:text="@string/register"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    />
		</LinearLayout>
								
	</LinearLayout>
</ScrollView>
