<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#DDDDDD" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	<ImageView
		    android:id="@+id/avatar"
			android:layout_width="48dp"
			android:layout_height="48dp"
		    />
		<TextView
	        android:id="@+id/meta"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content" 
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"
	        />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/vote_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/vote_up_button"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/voteup" />

            <ImageView
                android:id="@+id/button_spacer"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/vote_down_button"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/votedown" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vote_container"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/netvotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vote_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/votes"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <HorizontalScrollView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:scrollbars="none"
            >
			<LinearLayout 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
                android:layout_gravity="center_vertical"
				>
				<ImageView
					android:layout_height="1dp" 
					android:layout_width="match_parent"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:background="#EEEEEE"
					/>
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                >
					<Button 
					    android:text="@string/edit" 
					    android:id="@+id/edit"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:textSize="16sp" 
						android:textColor="#666666"
						android:background="#FFFFFF"
						android:padding="6dp"
						/>
					<ImageView
						android:layout_height="match_parent" 
						android:layout_width="1dp"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
						android:background="#EEEEEE"
						/>
					<Button 
					    android:text="@string/flag" 
					    android:id="@+id/flag"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:textSize="16sp" 
						android:textColor="#666666"
						android:background="#FFFFFF"
						android:padding="6dp"
						/>
					<ImageView
						android:layout_height="match_parent" 
						android:layout_width="1dp"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
						android:background="#EEEEEE"
						/>
					<Button 
					    android:text="@string/hide" 
					    android:id="@+id/hide"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:textSize="16sp" 
						android:textColor="#666666"
						android:background="#FFFFFF"
						android:padding="6dp"
						/>
					<ImageView
						android:layout_height="match_parent" 
						android:layout_width="1dp"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
						android:background="#EEEEEE"
						/>
					<Button 
					    android:text="@string/ask_related" 
					    android:id="@+id/ask_related"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:textSize="16sp" 
						android:textColor="#666666"
						android:background="#FFFFFF"
						android:padding="6dp"
						/>
					<ImageView
						android:layout_height="match_parent" 
						android:layout_width="1dp"
						android:layout_marginTop="4dp"
						android:layout_marginBottom="4dp"
						android:background="#EEEEEE"
						/>
					<Button 
					    android:text="@string/comment" 
					    android:id="@+id/comment"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:textSize="16sp" 
						android:textColor="#666666"
						android:background="#FFFFFF"
						android:padding="6dp"
						/>
				</LinearLayout>
				<ImageView
					android:layout_height="1dp" 
					android:layout_width="match_parent"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:background="#EEEEEE"
					/>
			</LinearLayout>
		</HorizontalScrollView>		
	</LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp" />
	<LinearLayout
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="vertical" 
	    />
</LinearLayout>